tests/Spire.Analyzers.Tests/SPIRE002/cases/Detect_GenericStruct_EmptyBody.cs
//@ should_fail
// Ensure that SPIRE002 IS triggered when [MustBeInit] is applied to a generic struct S<T> with no instance fields.
[MustBeInit] //~ ERROR
public struct S<T> { }
